k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-system-frontend-deployment
  labels:
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
        - name: ecommerce-system-frontend-deployment-container 
          image: ngophuocloi/ecommerce-system-frontend:linux-v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-system-frontend-service
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    tier: frontend
