ingress-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-system-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - my-ecommerce.live
    secretName: ingress-cert
  rules:
    - host: my-ecommerce.live
      http:
        paths:
          - path: /ecommerce_backend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ecommerce-system-backend-service
                port:
                  number: 80
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: ecommerce-system-frontend-service
                port:
                  number: 80
